# motion_control

./: .gitignore  .ycm_extra_config.py  CMakeLists.txt  README.md  board.h  compile_commands.json  cross_compile.cmake  generic-gcc-avr.cmake  native_test.cmake
.github/workflows/: unit_tests.yml
adc/: CMakeLists.txt
adc/inc/: adc.h
adc/src/: CMakeLists.txt  adc.c
adc/test/: CMakeLists.txt  adc_test.c
adc/test/mocks/: CMakeLists.txt  adc_mock.cpp  adc_mock.h  fixture.cpp  fixture.h
can/: CMakeLists.txt
can/inc/: can.h
can/src/: CMakeLists.txt  can.c
can/test/: CMakeLists.txt
can/test/mocks/: CMakeLists.txt
can_driver/: CMakeLists.txt
can_driver/inc/: Mcp2515.h  SpiHandler.h
can_driver/src/: CMakeLists.txt  Mcp2515_Cfg.c
can_driver/test/: CMakeLists.txt  can_driver_test.cpp
can_driver/test/mocks/: CMakeLists.txt  FakeSpi.cpp  FakeTimer.cpp  Fixture.cpp  SpiMock.h
can_drv/: CMakeLists.txt
can_drv/inc/: Mcp2515.h  Mcp2515_Cfg.h  Os_TimeServices.h  can_frame.h
can_drv/src/: CMakeLists.txt  Mcp2515.c  Mcp2515_Cfg.c
can_drv/test/: CMakeLists.txt  can_drv_test.cpp
can_drv/test/mocks/: CMakeLists.txt  Fixture.h  TimerMock.h  can_drv_mock.cpp  can_drv_mock.h  fake_can_drv.cpp  fake_can_drv.h
cnt/: CMakeLists.txt
cnt/inc/: cnt.h
cnt/src/: CMakeLists.txt  cnt.c
cnt/test/: CMakeLists.txt  cnt_test.c
cnt/test/mocks/: CMakeLists.txt  cnt_mock.cpp  cnt_mock.h  fixture.cpp  fixture.h
delay/: CMakeLists.txt  delay_mock.cpp  delay_mock.h  fake_delay.cpp  fake_delay.h
delay/util/: delay.h
gpio/: CMakeLists.txt  compile_commands.json
gpio/inc/: gpio.h
gpio/src/: CMakeLists.txt  gpio.c
gpio/test/: CMakeLists.txt  gpio_test.c
gpio/test/mocks/: CMakeLists.txt  fake_gpio.cpp  fake_gpio.h  fixture.cpp  fixture.h  gpio_mock.cpp  gpio_mock.h
pid/: CMakeLists.txt  compile_commands.json
pid/doc/: pid_specifications.txt
pid/inc/: error_codes.h  pid.h  pid_externals.h  rte_pid.h  rte_pid_types.h
pid/src/: CMakeLists.txt  pid.c
pid/test/: CMakeLists.txt  pid_test.cpp
pid/test/mocks/: CMakeLists.txt  FakeRte.cpp  Fixture.cpp  Fixture.h  RteMock.h  SystemModel.cpp  SystemModel.h
pwm/: CMakeLists.txt
pwm/inc/: pwm.h
pwm/src/: CMakeLists.txt  pwm.c
pwm/test/: CMakeLists.txt  pwm_test.c
pwm/test/mocks/: CMakeLists.txt  fixture.cpp  fixture.h  pwm_mock.cpp  pwm_mock.h
schd/: CMakeLists.txt
schd/inc/: schd.h  schd_cfg.h
schd/src/: CMakeLists.txt  schd.c  schd_cfg.c
schd/test/: CMakeLists.txt  schd_test.c
schd/test/mocks/: CMakeLists.txt  fixture.cpp  fixture.h  schd_mock.cpp  schd_mock.h
spi/: CMakeLists.txt  compile_commands.json
spi/inc/: spi.h
spi/src/: CMakeLists.txt  spi.c
spi/test/: CMakeLists.txt  spi_test.c
spi/test/mocks/: CMakeLists.txt  fake_spi.cpp  fake_spi.h  fixture.cpp  fixture.h  spi_mock.cpp  spi_mock.h
spi_if/: CMakeLists.txt
spi_if/inc/: spi_if.h
spi_if/src/: CMakeLists.txt  spi_if.c
spi_if/test/: CMakeLists.txt  spi_if_test.cpp
spi_if/test/mocks/: CMakeLists.txt  fake_spi_if.cpp  fake_spi_if.h  spi_if_mock.cpp  spi_if_mock.h
uart/: CMakeLists.txt
uart/inc/: uart.h
uart/src/: CMakeLists.txt  uart.c
uart/test/: CMakeLists.txt  uart_test.c
uart/test/mocks/: CMakeLists.txt  fixture.cpp  fixture.h  uart_mock.cpp  uart_mock.h
