# cmake_minimum_required(VERSION 3.16)
# set(CMAKE_CXX_STANDARD 17)
# set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(pid_dir ${CMAKE_CURRENT_SOURCE_DIR})
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/inc)

# project(pid VERSION 1.0)

##
## Source definitions
##
add_subdirectory(src)


##
## Test definitions
##
add_subdirectory(test)
